# card-jitsu

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0001.create_challenges.down.sql  0001.create_challenges.up.sql  0002.simplify_challenge.down.sql  0002.simplify_challenge.up.sql
src/: db.rs  lib.rs  main.rs  models.rs  prelude.rs  result.rs  utils.rs
src/commands/: challenge.rs  game.rs  mod.rs
tests/: utils.rs
