[package]
name = "card_jitsu"
version = "0.1.0"
authors = ["Gustavo Parreira <gustavotcparreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.0"
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15.0"