[package]
name = "card_jitsu"
version = "0.1.0"
authors = ["Gustavo Parreira <gustavotcparreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
futures-preview = "0.3.0-alpha.19"
dotenv = "0.15.0"
rand = "0.7.3"